manifest/discourse.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: discourse
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: discourse
  namespace: discourse
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "discourse.<path:stringreplacesecret#domain>"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: discourse
          port: 80
